...
              modifier =
                  Modifier.fillMaxWidth()
                      .background(color = MaterialTheme.colorScheme.surfaceVariant)
                      .topAppBarModifier()) {
                Row(
                    modifier =
                        Modifier.testTag("searchBar")
                            .fillMaxSize()
                            .padding(horizontal = 8.dp, vertical = 6.dp)
                            .background(
                                color = MaterialTheme.colorScheme.surfaceContainer,
                                shape = RoundedCornerShape(5.dp))
                            .clickable { navigationActions.navigateTo(INVITE_COLLABORATORS) },
...
