...
      profileViewModel.loadProfilePicture(uid) { profilePicture.value = it }
    }
  }

  Card(
      modifier =
          Modifier.testTag("CollabCard")
              .fillMaxWidth()
              .height(67.dp)
              .border(width = 2.dp, brush = PrimaryGradientBrush, shape = RoundedCornerShape(5.dp)),
      colors = CardDefaults.cardColors(containerColor = MaterialTheme.colorScheme.surfaceVariant)) {
        Row(
            modifier = Modifier.fillMaxSize().padding(horizontal = 10.dp),
...
